<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.main.MainFragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_greeeting"
            style="@style/TextTitle.Bold.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/greeting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_greeeting_name"
            style="@style/TextTitle.Bold.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/greeting_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_greeeting" />

        <TextView
            android:id="@+id/tv_greeting_question"
            style="@style/TextContent.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/greeting_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_greeeting_name" />

        <ImageView
            android:id="@+id/vector_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/character"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bg_layout"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bg_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_rounded_top_white"
            android:transitionName="bg_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_greeting_question">

            <TextView
                android:id="@+id/tv_content_title_1"
                style="@style/TextTitle.Bold.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anemia"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/btn_checkup"
                android:layout_width="150dp"
                android:layout_height="160dp"
                android:orientation="vertical"
                android:background="@drawable/bg_rounded_blue"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_content_title_1"
                app:layout_constraintEnd_toStartOf="@id/btn_history">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_check_blue"/>

                <TextView
                    style="@style/TextTitle.Bold.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_up"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    style="@style/TextContent.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkup_desc"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_history"
                android:layout_width="150dp"
                android:layout_height="160dp"
                android:orientation="vertical"
                android:background="@drawable/bg_rounded_blue"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toEndOf="@id/btn_checkup"
                app:layout_constraintTop_toBottomOf="@id/tv_content_title_1"
                app:layout_constraintEnd_toEndOf="@id/gl_end">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_clock_blue"/>

                <TextView
                    style="@style/TextTitle.Bold.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    style="@style/TextContent.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shows_records_nof_detection"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_content_title_2"
                style="@style/TextTitle.Bold.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/btn_checkup"/>

            <TextView
                android:id="@+id/btn_more"
                style="@style/TextContent.blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintBottom_toBottomOf="@id/tv_content_title_2"/>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_article"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_content_title_2"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                tools:duration="500">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/card_article_shimmer"/>
                    <include layout="@layout/card_article_shimmer"/>
                    <include layout="@layout/card_article_shimmer"/>
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_article"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_content_title_2"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintEnd_toEndOf="@id/gl_end"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="30dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="30dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>