<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_article_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.article.ArticleDetailFragment"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/bg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_top_white"
        android:transitionName="bg_layout"
        android:padding="20dp"
        android:gravity="top"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            style="@style/TextTitle.Bold.Black"
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/article_title"
            android:gravity="center"/>

        <TextView
            style="@style/TextContent"
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_history_date"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            android:layout_marginTop="10dp"/>

        <TextView
            style="@style/TextContent.Black"
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/article_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>

</ScrollView>