<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_fragment"
    android:transitionName="transition_register"
    android:orientation="vertical"
    android:background="@color/blue"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.bangkit.anemai.ui.welcome.WelcomeImageView
            android:id="@+id/iv_welcome"
            android:layout_width="match_parent"
            android:transitionName="iv_welcome"
            android:layout_height="400dp"
            android:layout_marginTop="-400dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/headline_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextTitle.Bold.White"
            android:transitionName="headline_welcome"
            android:text="@string/headline_welcome"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="30dp" />

        <TextView
            android:id="@+id/bodycopy_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextContent.White"
            android:transitionName="bodycopy_welcome"
            android:text="@string/bodycopy_welcome"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="card_register"
            app:cardCornerRadius="18dp"
            android:orientation="vertical"
            android:layout_margin="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_judul_register"
                    style="@style/TextSubhead.Black"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/register" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_layout_full_name"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.TextInputLayout.Rounded"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/full_name"
                    app:layout_constraintTop_toBottomOf="@+id/emailTextView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextContent.Black"
                        android:ems="10"
                        android:inputType="text"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_layout_birth_date"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.TextInputLayout.Rounded"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/birth_date"
                    app:layout_constraintTop_toBottomOf="@+id/emailTextView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_birth_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextContent.Black"
                        android:ems="10"
                        android:inputType="date"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_layout_gender"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.TextInputLayout.Rounded"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/gender"
                    app:layout_constraintTop_toBottomOf="@+id/emailTextView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextContent.Black"
                        android:ems="10"
                        android:inputType="none"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_layout_email"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.TextInputLayout.Rounded"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/email"
                    app:layout_constraintTop_toBottomOf="@+id/emailTextView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextContent.Black"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_layout_password"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.TextInputLayout.Rounded"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/password"
                    app:layout_constraintTop_toBottomOf="@+id/emailTextView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextContent.Black"
                        android:ems="10"
                        android:inputType="textPassword"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/register"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    style="@style/TextContent.Black.Bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_action_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/logo_google"
                    style="@style/TextContent.blue"
                    android:textAllCaps="false"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/transparent"
                    android:layout_marginTop="6dp"
                    android:text="@string/register_with_google"
                    android:layout_marginBottom="12dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>



</ScrollView>